added a gray background so game is in the center, some info text to fill the screen

--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,20 @@
 <head>
     <link rel="stylesheet" href="index.css" />
     <title>Milk Tea Shop</title>
+    <script src="index.js" defer></script>
 </head>
 <body>
-    <img src="./img/background.png" alt="background" class="background">
+    <div class="info">
+        <h1>Thanks for playing my game!</h1>
+        <h2>Check out my other stuff at <a href="https://www.charlottexlin.com">charlottexlin.com</a></h2>
+    </div>
+    <div class="rectangle"></div>
+    <div class="game">
+        <img src="./img/background.png" alt="background">
+        <h1 class="moneyCounter">$2.00</h1>
+    </div>
+    <div class="info bottomText">
+        <h2>Report bugs to charlottexlin02@gmail.com</h2>
+    </div>
 </body>
 </html>
