created ingredients arrays, added timer text, wrote function to generate a random order

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,9 @@
         <!-- Background image -->
         <img src="./img/background.png" alt="background">
 
+        <!-- Timer -->
+        <h2 class="timer">Remaining Time: 2:00</h2>
+
         <!-- Shop panel on the left side -->
         <div class="shopPanel">
             <!-- Customer -->
