display a random order, change button color

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
         <!-- Timer -->
         <h2 id="timer" class="absolute">Remaining Time: 0:00</h2>
 
-        <!-- Shop panel on the left side -->
+        <!-- Shop panel on the top-left side -->
         <div class="shopPanel">
             <!-- Customer -->
             <img src="./img/customer1.png" alt="customer 1" id="customer" class="absolute">
@@ -37,6 +37,15 @@
             <img src="./img/pearls.png" alt="pearls" id="topping" class="absolute">
             <!-- Temperature -->
             <img src="./img/iceCubes.png" alt="ice cubes" id="temperature" class="absolute">
+        </div>
+
+        <!-- Order panel on the bottom-left side -->
+        <div class="orderPanel">
+            <div id="orderIcons" class="ingredientIcons">
+                <img src="" alt="" id="flavorOrder" class="icon">
+                <img src="" alt="" id="toppingOrder" class="icon">
+                <img src="" alt="" id="tempOrder" class="icon">
+            </div>
         </div>
 
         <!-- Ingredients panel on the right side -->
