ingredient icon buttons now working to fill the cup - core game functionality

--- a/src/index.html
+++ b/src/index.html
@@ -32,11 +32,11 @@
             <!-- Customer -->
             <img src="./img/customer1.png" alt="customer 1" id="customer" class="absolute">
             <!-- Tea -->
-            <img src="./img/greenTea.png" alt="green tea" id="tea" class="absolute">
+            <img src="" alt="" id="tea" class="absolute">
             <!-- Toppings -->
-            <img src="./img/pearls.png" alt="pearls" id="topping" class="absolute">
+            <img src="" alt="" id="topping" class="absolute">
             <!-- Temperature -->
-            <img src="./img/iceCubes.png" alt="ice cubes" id="temperature" class="absolute">
+            <img src="" alt="" id="temperature" class="absolute">
         </div>
 
         <!-- Order panel on the bottom-left side -->
