fixed css for money counter and the various topping locations

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,10 @@
             <!-- Tea -->
             <img src="" alt="" id="tea" class="absolute">
             <!-- Toppings -->
-            <img src="" alt="" id="topping" class="absolute">
+            <img src="" alt="" id="boba" class="topping absolute">
+            <img src="" alt="" id="redBean" class="topping absolute">
+            <img src="" alt="" id="jelly" class="topping absolute">
+            <img src="" alt="" id="whippedCream" class="topping absolute">
             <!-- Temperature -->
             <img src="" alt="" id="temperature" class="absolute">
         </div>
