timer + perfect animation

--- a/src/index.html
+++ b/src/index.html
@@ -25,12 +25,14 @@
         <img src="./img/background.png" alt="background">
 
         <!-- Timer -->
-        <h2 id="timer" class="absolute">Remaining Time: 0:00</h2>
+        <h2 id="timer" class="absolute">Remaining Time: 2:00</h2>
 
         <!-- Shop panel on the top-left side -->
         <div class="shopPanel">
             <!-- Customer -->
-            <img src="./img/customer1.png" alt="customer 1" id="customer" class="absolute">
+            <img src="./img/customer1.png" alt="customer" id="customer" class="absolute">
+            <!-- Perfect -->
+            <img src="" alt="" id="perfect" class="absolute perfect-animation">
             <!-- Tea -->
             <img src="" alt="" id="tea" class="absolute">
             <!-- Toppings -->
