--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
         <!-- Shop panel on the top-left side -->
         <div>
             <!-- Customer -->
-            <img src="./img/customer1.png" alt="customer" id="customer" class="absolute">
+            <img src="./img/customer1.png" alt="customer" id="customer" class="absolute enter-right">
             <!-- Perfect -->
             <img src="" alt="" id="perfect" class="absolute perfect-animation">
             <!-- Tea -->
