customer images, price text that pops up when you finish a tea

--- a/src/index.html
+++ b/src/index.html
@@ -32,9 +32,11 @@
         <!-- Shop panel on the top-left side -->
         <div>
             <!-- Customer -->
-            <img src="./img/customer1.png" alt="customer" id="customer" class="absolute enter-right">
+            <img src="" alt="" id="customer" class="absolute enter-right">
             <!-- Perfect -->
             <img src="" alt="" id="perfect" class="absolute perfect-animation">
+            <!-- Price Text -->
+            <h1 id="priceText" class="absolute perfect-animation"></h1>
             <!-- Tea -->
             <img src="" alt="" id="tea" class="absolute">
             <!-- Toppings -->
