--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css" />
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <title>Milk Tea Shop</title>
     <script src="index.js" type="module"></script>
 </head>
