fix capitalization of room temp icon in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
             <!-- Temperature -->
             <div id="tempIcons" class="ingredientIcons">
                 <img src="./img/coldIcon.png" alt="cold icon" id="coldIcon" class="icon">
-                <img src="./img/roomtempIcon.png" alt="room temp icon" id="roomTempIcon" class="icon">
+                <img src="./img/roomTempIcon.png" alt="room temp icon" id="roomTempIcon" class="icon">
                 <img src="./img/hotIcon.png" alt="hot icon" id="hotIcon" class="icon">
             </div>
             <!-- Buttons and money counter -->
