--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     <div id="frame"></div>
 
     <!-- The game screen -->
-    <div id="game" class="gameScreen">
+    <div id="game" class="invisible gameScreen">
 
         <!-- Background images -->
         <img src="./img/shopPane.png" alt="shop pane" id="shopPane" class="absolute">
@@ -104,12 +104,43 @@
 
     </div>
 
+    <!-- The game start screen -->
+    <div id="gameStart" class="gameScreen">
+        <div class="menuBg absolute"></div>
+            <h1 id="startHeader" class="menuHeader absolute">Milk Tea Shop</h1>
+            <div id="startMenuBtns" class="absolute">
+                <button id="playBtn" class="startMenuBtn">Play</button>
+                <button id="tutorialBtn" class="startMenuBtn">How to play</button>
+                <button id="creditsBtn" class="startMenuBtn">Credits</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- The "how to play" screen -->
+    <div id="tutorial" class="invisible gameScreen">
+        <div class="menuBg absolute"></div>
+            <h1 id="tutorialHeader" class="menuHeader absolute">How to play</h1>
+            <button id="backBtn1" class="backBtn absolute">Back to menu</button>
+        </div>
+    </div>
+
+    <!-- The "credits" screen -->
+    <div id="credits" class="invisible gameScreen">
+        <div class="menuBg absolute"></div>
+            <h1 id="creditHeader" class="menuHeader absolute">How to play</h1>
+            <button id="backBtn2" class="backBtn absolute">Back to menu</button>
+        </div>
+    </div>
+
     <!-- The game over screen -->
     <div id="gameOver" class="invisible gameScreen">
-    <div id="gameOverBg" class="absolute"></div>
-        <h1 id="gameOverHeader" class="absolute">Game over</h1>
+    <div class="menuBg absolute"></div>
+        <h1 id="gameOverHeader" class="menuHeader absolute">Game over</h1>
         <h2 id="gameOverText" class="absolute"></h2>
-        <button id="restartBtn" class="absolute">Play again</button>
+        <div id="gameOverMenuBtns" class="absolute">
+            <button id="restartBtn" class="gameOverMenuBtn">Play again</button>
+            <button id="backBtn3" class="gameOverMenuBtn">Back to menu</button>
+        </div>
     </div>
 </body>
 </html>
