tutorial and credits screens, bg music

--- a/src/index.html
+++ b/src/index.html
@@ -120,6 +120,15 @@
     <div id="tutorial" class="invisible gameScreen">
         <div class="menuBg absolute"></div>
             <h1 id="tutorialHeader" class="menuHeader absolute">How to play</h1>
+            <div id="tutorialText" class="infoText absolute">
+                Welcome to your milk tea shop! You will have two minutes to make as much money as possible. 
+                When customers enter your shop, their tea order will appear in the bottom-left panel. 
+                Use the buttons on the right panel to select the correct flavor, toppings, and temperature to make their tea. 
+                If you mess up, press the "Trash" button to throw away the current tea and start over. 
+                When you're done making the tea, press the "Done" button to serve it to the customer. 
+                How much money the customer will pay depends on how correctly you made their order. 
+                Try to serve as many perfect teas to customers as possible to make the most money!
+            </div>
             <button id="backBtn1" class="backBtn absolute">Back to menu</button>
         </div>
     </div>
@@ -127,7 +136,15 @@
     <!-- The "credits" screen -->
     <div id="credits" class="invisible gameScreen">
         <div class="menuBg absolute"></div>
-            <h1 id="creditHeader" class="menuHeader absolute">How to play</h1>
+            <h1 id="creditsHeader" class="menuHeader absolute">Credits</h1>
+            <div id="creditsText" class="infoText absolute">
+                Developer: Charlotte Lin<br>
+                Art: Charlotte Lin<br>
+                Music: Matthew Regan<br>
+                Sound effects from <a href="https://www.zapsplat.com">Zapsplat.com</a><br>
+                Visit my website!<br>
+                <a href="https://www.charlottexlin.com">www.charlottexlin.com</a>
+            </div>
             <button id="backBtn2" class="backBtn absolute">Back to menu</button>
         </div>
     </div>
