changes to some sound effects, disable done button between rounds, add mute buttons to start menu, remove text on blue background

--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,6 @@
 </head>
 
 <body>
-    <!-- Informative text at the top of the screen -->
-    <div class="info">
-        <h1>Thanks for playing my game!</h1>
-        <h2>Check out my other stuff at <a href="https://www.charlottexlin.com">charlottexlin.com</a></h2>
-    </div>
-
     <!-- White frame around the game -->
     <div id="frame"></div>
 
@@ -113,6 +107,8 @@
                 <button id="tutorialBtn" class="startMenuBtn">How to play</button>
                 <button id="creditsBtn" class="startMenuBtn">Credits</button>
             </div>
+            <img src="./img/music.png" alt="music button" id="musicBtn" class="absolute">
+            <img src="./img/sound.png" alt="sound button" id="soundBtn" class="absolute">
         </div>
     </div>
 
@@ -141,9 +137,9 @@
                 Developer: Charlotte Lin<br>
                 Art: Charlotte Lin<br>
                 Music: Matthew Regan<br>
-                Sound effects from <a href="https://www.zapsplat.com">Zapsplat.com</a><br>
-                Visit my website!<br>
-                <a href="https://www.charlottexlin.com">www.charlottexlin.com</a>
+                Sound effects: <a href="https://www.zapsplat.com" target="_blank" rel="noopener noreferrer">Zapsplat.com</a><br>
+                <br>
+                <span class="bold">Visit my site: </span><a href="https://www.charlottexlin.com" target="_blank" rel="noopener noreferrer">www.charlottexlin.com</a>
             </div>
             <button id="backBtn2" class="backBtn absolute">Back to menu</button>
         </div>
