--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,6 @@
 
         <!-- Secret border to cover up the cup changing -->
         <div id="sb1" class="secretBorder"></div>
-        <div id="sb2" class="secretBorder"></div>
 
         <!-- Shop panel on the top-left side -->
         <div>
@@ -38,16 +37,16 @@
             <h1 id="priceText" class="absolute perfect-animation"></h1>
             <div id="cupOfTea">
                 <!-- Cup -->
-                <img src="./img/cup.png" alt="cup" id="cup" class="absolute">
+                <img src="./img/cup.png" alt="cup" id="cup" class="absolute" onerror="this.style.display='none'">
                 <!-- Tea -->
-                <img src="" alt="" id="tea" class="absolute">
+                <img src="" alt="" id="tea" class="absolute" onerror="this.style.display='none'">
                 <!-- Toppings -->
-                <img src="" alt="" id="boba" class="topping absolute">
-                <img src="" alt="" id="redBean" class="topping absolute">
-                <img src="" alt="" id="jelly" class="topping absolute">
-                <img src="" alt="" id="whippedCream" class="topping absolute">
+                <img src="" alt="" id="boba" class="topping absolute" onerror="this.style.display='none'">
+                <img src="" alt="" id="redBean" class="topping absolute" onerror="this.style.display='none'">
+                <img src="" alt="" id="jelly" class="topping absolute" onerror="this.style.display='none'">
+                <img src="" alt="" id="whippedCream" class="topping absolute" onerror="this.style.display='none'">
                 <!-- Temperature -->
-                <img src="" alt="" id="temperature" class="absolute">
+                <img src="" alt="" id="temperature" class="absolute" onerror="this.style.display='none'">
             </div>
         </div>
 
