--- a/src/index.html
+++ b/src/index.html
@@ -32,21 +32,21 @@
             <!-- Customer -->
             <img src="" alt="" id="customer" class="absolute">
             <!-- Perfect -->
-            <img src="" alt="" id="perfect" class="absolute perfect-animation">
+            <img src="" alt="" id="perfect" class="absolute perfect-animation invisible">
             <!-- Price Text -->
             <h1 id="priceText" class="absolute perfect-animation"></h1>
             <div id="cupOfTea">
                 <!-- Cup -->
-                <img src="./img/cup.png" alt="cup" id="cup" class="absolute" onerror="this.style.display='none'">
+                <img src="./img/cup.png" alt="cup" id="cup" class="absolute">
                 <!-- Tea -->
-                <img src="" alt="" id="tea" class="absolute" onerror="this.style.display='none'">
+                <img src="" alt="" id="tea" class="absolute invisible">
                 <!-- Toppings -->
-                <img src="" alt="" id="boba" class="topping absolute" onerror="this.style.display='none'">
-                <img src="" alt="" id="redBean" class="topping absolute" onerror="this.style.display='none'">
-                <img src="" alt="" id="jelly" class="topping absolute" onerror="this.style.display='none'">
-                <img src="" alt="" id="whippedCream" class="topping absolute" onerror="this.style.display='none'">
+                <img src="" alt="" id="boba" class="topping absolute invisible">
+                <img src="" alt="" id="redBean" class="topping absolute invisible">
+                <img src="" alt="" id="jelly" class="topping absolute invisible">
+                <img src="" alt="" id="whippedCream" class="topping absolute invisible">
                 <!-- Temperature -->
-                <img src="" alt="" id="temperature" class="absolute" onerror="this.style.display='none'">
+                <img src="" alt="" id="temperature" class="absolute invisible">
             </div>
         </div>
 
