redid timer text

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,8 @@
         <img src="./img/ingredientsPane.png" alt="ingredients pane" id="ingredientsPane" class="absolute">
 
         <!-- Timer -->
-        <h2 id="timer" class="absolute">Remaining Time: 0:00</h2>
+        <h2 id="timerText" class="absolute">Remaining Time: </h2>
+        <h2 id="timer" class="absolute">0:00</h2>
 
         <!-- Secret border to cover up the cup changing -->
         <div id="sb1" class="secretBorder"></div>
